# Grafkit3

./: .clang-format  .clang-format.2  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.MD  README.MD  TODO
cmake/: GKSourceTools.cmake  ProjectWarnings.cmake  PyEnv.cmake  Win32Subsystem.cmake
docker/: Dockerfile  build.sh  docker-compose.yaml
include/grafkit/: application.h  common.h  render.h
include/grafkit/core/: buffer.h  command_buffer.h  descriptor.h  descriptor_pool.h  device.h  framebuffer.h  image.h  initializers.h  instance.h  log.h  pipeline.h  render_target.h  swap_chain.h  vulkan_utils.h  window.h
include/grafkit/descriptors/: animation_desc.h  image_desc.h  material_desc.h  mesh_desc.h  scene_desc.h
include/grafkit/interface/: asset.h  resource.h
include/grafkit/render/: animation.h  material.h  mesh.h  posteffect.h  posteffect.hpp  render_graph.h  scenegraph.h  texture.h
include/grafkit/resource/: asset.h  image_builder.h  material_builder.h  resource.h  scenegraph_builder.h
include/grafkit/utils/: tree.hpp
include/grafkit_loader/: asset_loader_system.h  assimp_loader.h  file_loader.h  json_adapter.h  json_deserializer.h  json_deserialzer.h
src/: CMakeLists.txt  readme.md
src/grafkit/: CMakeLists.txt  application.cpp  render.cpp  stdafx.h
src/grafkit/core/: buffer.cpp  command_buffer.cpp  descriptor.cpp  descriptor_pool.cpp  device.cpp  framebuffer.cpp  image.cpp  instance.cpp  log.cpp  pipeline.cpp  render_target.cpp  swap_chain.cpp  vma_impl.cpp  window.cpp
src/grafkit/descriptors/: animation_desc.gen.yaml  image_desc.gen.yaml  material_desc.gen.yaml  mesh_desc.gen.yaml  scene_desc.gen.yaml  template.j2
src/grafkit/render/: animation.cpp  material.cpp  mesh.cpp  render_graph.cpp  scenegraph.cpp  texture.cpp
src/grafkit/resource/: asset.cpp  image_builder.cpp  material_builder.cpp  resource.cpp  scenegraph_builder.cpp
src/grafkit_loader/: CMakeLists.txt  assimp_loader.cpp  assimp_util.cpp  assimp_util.h  file_loader.cpp  json_adapter.cpp  json_deserializer.cpp  stdafx.h
src/grafkit_loader/json/: json_glm.cpp  json_glm.h  json_header.j2  json_register.j2  json_registry.cpp  json_registry.h  json_template.j2
src/player/: CMakeLists.txt  assimp.cpp_  assimp.h_  cube.h  file.j2  hello_application.cpp  hello_application.h  main.cpp  stdafx.h
src/player/shaders/: triangle.frag  triangle.vert
src/samples/: CMakeLists.txt  bloom.cpp  cube_mesh.h  cubes.cpp
src/samples/shaders/: forward_render.frag  gaussblur.frag  quad.vert  red.frag  template.j2  triangle.vert
tests/: CMakeLists.txt  test_loaderSystem.cpp  test_one.cpp  test_tree_utils.cpp  test_two.cpp
tests/data/: test.json
thirdparties/: CMakeLists.txt
tools/: hexdump.py  setup.cfg  setup.py
tools/src/grafkit_tools/: codegen.py  hexdump.py
tools/src/grafkit_tools/utils/: __init__.py
